# YagaAi-Mission-Control

./: .gitignore  AGENTS.md  README.md  RESULTS.md  deploy.sh  install.sh  mission-control.service  package-lock.json  package.json  skills-lock.json
services/api/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-prod.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 20260314_001_baseline.py  20260317_002_rename_orchestration_to_control_plane.py  20260318_003_work_items_lexorank.py  20260323_004_control_plane_naomi_queue.py  20260323_005_rename_naomi_queue_to_agent_queue.py  20260323_006_partial_unique_index_agent_queue.py  20260323_007_add_work_item_title_to_agent_queue.py  20260323_008_create_dispatch_records_table.py  20260323_009_add_project_repo_root_to_agent_queue.py  20260323_010_add_main_session_key_to_agents.py  20260323_011_extend_dispatch_records.py  20260324_012_drop_legacy_session_id.py
services/api/app/: config.py  main.py
services/api/app/control_plane/: __init__.py  dependencies.py
services/api/app/control_plane/api/: __init__.py  agent_queue.py  dapr_router.py  naomi_queue.py  router.py  schemas.py
services/api/app/control_plane/application/: __init__.py  command_service.py  consumer_recovery_service.py  delivery_service.py  dispatch_selection_service.py  openclaw_dispatch_service.py  ports.py  queue_dispatch_service.py  queue_ingress_service.py  read_model_service.py  watchdog_service.py  worker_state_machine_service.py
services/api/app/control_plane/domain/: __init__.py  models.py  stream_contract.py
services/api/app/control_plane/infrastructure/: __init__.py  tables.py
services/api/app/control_plane/infrastructure/repositories/: run.py  (+6 more)
services/api/app/observability/: dependencies.py
services/api/app/observability/api/: router.py  schemas.py
services/api/app/observability/application/: dashboard_service.py  import_service.py  metrics_service.py  ports.py  supervisor_service.py  workflow_service.py
services/api/app/observability/domain/: models.py
services/api/app/observability/infrastructure/: langfuse_repository.py  supervisor_adapter.py  tables.py  workflow_adapter.py
services/api/app/orchestration/: dependencies.py
services/api/app/orchestration/api/: __init__.py  dapr_router.py  router.py  schemas.py
services/api/app/orchestration/application/: __init__.py  command_service.py  consumer_recovery_service.py  delivery_service.py  ports.py  read_model_service.py  watchdog_service.py  worker_state_machine_service.py
services/api/app/orchestration/domain/: __init__.py  models.py
services/api/app/orchestration/infrastructure/: __init__.py  in_memory_repository.py  sqlite_repository.py  tables.py
services/api/app/planning/: dependencies.py
services/api/app/planning/api/: agents.py  backlogs.py  epics.py  labels.py  projects.py  router.py  schemas.py  stories.py  tasks.py  work_items.py
services/api/app/planning/application/: agent_service.py  backlog_service.py  epic_overview_action_service.py  epic_service.py  label_service.py  ports.py  project_service.py  story_service.py  task_service.py  work_item_action_service.py  work_item_service.py
services/api/app/planning/domain/: models.py
services/api/app/planning/infrastructure/: repository.py  sqlite_repository.py  tables.py
services/api/app/shared/: agent_lookup_adapter.py  lexorank.py  logging.py  ports.py  utils.py
services/api/app/shared/api/: deps.py  envelope.py  errors.py
services/api/app/shared/db/: __init__.py  adapter.py  migrations.py  pg_compat.py  postgres_migrations.py  postgres_schema.sql  revision_check.py  session.py
services/api/app/workflow/: dependencies.py
services/api/app/workflow/api/: router.py
services/api/app/workflow/application/: ports.py  workflow_service.py
services/api/app/workflow/domain/: models.py
services/api/app/workflow/infrastructure/: filesystem_adapter.py
services/api/docs/: API_CONTRACTS.md  ARCHITECTURE.md  AUTH.md  INDEX.md  OPERATIONAL.md  ORCHESTRATION_STREAMS.md  STATUS_TRANSITIONS.md  TEST_STRATEGY.md
services/api/docs/_archive/: CONTROL_PLANE_STREAMS.md  OPERATIONAL.md
services/api/docs/tmp/: REFACTOR_PLAN.md
services/api/scripts/: fix_literal_newlines.py  lint.sh  run-dev.sh  schema_parity_check.py  sqlite_to_postgres_migrate.py
services/api/tests/: conftest.py  test_health.py  test_lexorank.py
services/api/tests/control_plane/: __init__.py  conftest.py  fake_agent_lookup.py  fake_agent_queue_repo.py  fake_dispatch_repo.py  fake_openclaw_adapter.py  test_command_routes.py  test_consumer_recovery_service.py  test_dapr_bridge_routes.py  test_delivery_service.py  test_dispatch_selection_service.py  test_queue_dispatch_service.py  test_queue_ingress_service.py  test_read_model_routes.py  test_stream_contract.py  test_watchdog_routes.py  test_watchdog_service.py  test_worker_state_machine_service.py
services/api/tests/observability/: conftest.py  test_observability_routes.py
services/api/tests/orchestration/: __init__.py  conftest.py  test_command_routes.py  test_consumer_recovery_service.py  test_dapr_bridge_routes.py  test_delivery_service.py  test_read_model_routes.py  test_stream_contract.py  test_watchdog_routes.py  test_watchdog_service.py  test_worker_state_machine_service.py
services/api/tests/planning/: conftest.py  test_active_sprint_routes.py  test_agent_routes.py  test_backlog_items_routes.py  test_backlog_kind_transition_routes.py  test_backlog_routes.py  test_backlog_stories_routes.py  test_backlog_tasks_routes.py  test_epic_overview_actions_routes.py  test_epic_routes.py  test_get_by_key_routes.py  test_key_resolver.py  test_label_routes.py  test_project_routes.py  test_sprint_lifecycle_routes.py  test_sprint_membership_routes.py  test_story_routes.py  test_task_routes.py  test_work_item_routes.py
services/api/tests/shared/: test_pg_compat.py  test_sqlite_migrations.py
services/api/tests/support/: __init__.py  postgres_compat.py  runtime.py
services/api/tests/workflow/: test_workflow_routes.py
(+505 files in other folders)
