[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mission-control-api"
version = "0.1.0"
description = "Mission Control FastAPI service"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0"}
pydantic = ">=2.8.0"
pydantic-settings = ">=2.4.0"
psycopg = { version = ">=3.2.0", extras = ["binary"] }
sqlalchemy = ">=2.0.39"
alembic = ">=1.15.0"
greenlet = ">=3.2.0"
httpx = ">=0.27.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"
testcontainers = { version = ">=4.8.0", extras = ["postgres"] }
httpx = ">=0.27.0"
black = ">=25.1.0"
isort = ">=6.0.0"
pylint = ">=4.0.0"
pyright = ">=1.1.400"
bandit = ">=1.9.0"
import-linter = ">=2.9"

# ============================================
# Tool Configurations
# ============================================
pytest-cov = "^7.0.0"

[tool.black]
line-length = 100
target-version = ["py312"]
exclude = '''
/(
    \.git
    | \.venv
    | \.venv\.broken
    | __pycache__
    | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", ".venv.broken", "__pycache__"]
known_first_party = ["app"]

[tool.pylint.master]
ignore-paths = ["^.venv/.*$", "^.venv.broken/.*$", "^__pycache__/.*$"]
load-plugins = []

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "import-outside-toplevel",
    "unnecessary-ellipsis",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "duplicate-code",
    "redefined-builtin",  # FastAPI query params use `type` intentionally
    "not-callable",  # sqlalchemy func.count/func.cast dispatch via __getattr__
]

[tool.pylint.format]
max-line-length = 100
max-module-lines = 2500

[tool.pylint.typecheck]
# sqlalchemy.func.* dispatches via __getattr__ and __call__ which pylint
# cannot resolve statically — the E1102 false-positives are unavoidable
# without this override.
generated-members = [
    "sqlalchemy.sql.functions._FunctionGenerator.*",
    "sqlalchemy.func.*",
    "func.count",
    "func.cast",
    "func.extract",
    "func.current_timestamp",
    "func.round",
    "func.coalesce",
]

[tool.pylint.design]
max-public-methods = 30
max-locals = 25
max-branches = 15

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["app", "tests"]
exclude = ["**/node_modules", "**/.*", "__pycache__", ".pytest_cache", ".venv", ".venv.broken"]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

# ============================================
# Import Linter - Clean Architecture Rules
# ============================================

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Application cannot import from Infrastructure"
type = "forbidden"
source_modules = ["app.planning.application", "app.observability.application", "app.control_plane.application"]
forbidden_modules = ["app.planning.infrastructure", "app.observability.infrastructure", "app.control_plane.infrastructure"]

[[tool.importlinter.contracts]]
name = "Application cannot import from API"
type = "forbidden"
source_modules = ["app.planning.application", "app.observability.application", "app.control_plane.application"]
forbidden_modules = ["app.planning.api", "app.observability.api", "app.control_plane.api"]

[[tool.importlinter.contracts]]
name = "Domain cannot import from other layers"
type = "forbidden"
source_modules = ["app.planning.domain", "app.observability.domain", "app.control_plane.domain"]
forbidden_modules = [
    "app.planning.infrastructure",
    "app.planning.api",
    "app.observability.infrastructure",
    "app.observability.api",
    "app.control_plane.infrastructure",
    "app.control_plane.api",
    "app.shared",
]

[[tool.importlinter.contracts]]
name = "API routes cannot import Infrastructure directly"
type = "forbidden"
source_modules = ["app.planning.api", "app.observability.api", "app.control_plane.api"]
forbidden_modules = ["app.planning.infrastructure", "app.observability.infrastructure", "app.control_plane.infrastructure"]
ignore_imports = [
    "app.observability.dependencies -> app.observability.infrastructure.repositories.*",
    "app.observability.dependencies -> app.observability.infrastructure.sources.*",
    "app.control_plane.dependencies -> app.control_plane.infrastructure.repositories.*",
    "app.control_plane.dependencies -> app.control_plane.infrastructure.sources.*",
    "app.planning.dependencies -> app.planning.infrastructure.repositories.*",
    "app.planning.dependencies -> app.planning.infrastructure.repositories.backlogs.*",
    "app.planning.dependencies -> app.planning.infrastructure.sources.*",
    "app.planning.dependencies -> app.control_plane.infrastructure.repositories.*",
    "app.planning.dependencies -> app.control_plane.infrastructure.sources.*",
    "app.planning.dependencies -> app.control_plane.application.*",
    "app.control_plane.dependencies -> app.planning.infrastructure.shared.*",
]

[[tool.importlinter.contracts]]
name = "No cross-module imports (planning)"
type = "forbidden"
source_modules = ["app.planning"]
forbidden_modules = ["app.observability"]

[[tool.importlinter.contracts]]
name = "No cross-module imports (observability)"
type = "forbidden"
source_modules = ["app.observability"]
forbidden_modules = ["app.planning"]
